// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Message Box No icon 1`] = `
<section>
  

  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--no-icon fd-message-box--success fd-message-box--active"
  >
    
    
    <div
      class="fd-message-box__content"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <h2
              class="fd-message-box__title"
            >
              Success
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Success Message Box with no status icon in the title and "Show more" link in the body
            
        <div
          class="fd-message-box__more"
        >
          
                
          <a
            class="fd-link"
            href="#"
            tabindex="0"
          >
            Show more
          </a>
          
            
        </div>
        
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </div>
    

  </div>
  


  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--error fd-message-box--no-icon fd-message-box--active"
  >
    
    
    <div
      class="fd-message-box__content"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <h2
              class="fd-message-box__title"
            >
              Error
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Error Message Box with no status icon in the title
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Message Box Responsive 1`] = `
<section>
  

  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--information fd-message-box--active"
  >
    
    
    <div
      class="fd-message-box__content fd-message-box__content--s"
    >
      
        
      <header
        class="fd-bar fd-bar--cozy fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <h2
              class="fd-message-box__title"
            >
              Information
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Information Message Box on small screen in Cosy mode 
            
        <div
          class="fd-message-box__more"
        >
          
                
          <a
            class="fd-link"
            href="#"
            tabindex="0"
          >
            Show more
          </a>
          
            
        </div>
        
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--cozy fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </div>
    

  </div>
  


  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--error fd-message-box--active"
  >
    
    
    <div
      class="fd-message-box__content fd-message-box__content--m"
    >
      
        
      <header
        class="fd-bar fd-bar--cozy fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <h2
              class="fd-message-box__title"
            >
              Error
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Error Message Box on medium screen in Cosy mode  
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--cozy fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </div>
    

  </div>
  



  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--success fd-message-box--active"
  >
    
    
    <div
      class="fd-message-box__content fd-message-box__content--l"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <h2
              class="fd-message-box__title"
            >
              Success
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Success Message Box on large screen in compact (desktop) mode  
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </div>
    

  </div>
  


  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--warning fd-message-box--active"
  >
    
    
    <div
      class="fd-message-box__content fd-message-box__content--xl"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
             
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <h2
              class="fd-message-box__title"
            >
              Warning
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
           Warning Message Box on extra large screen in compact (desktop) mode 
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Message Box Rtl 1`] = `


`;

exports[`Storyshots Components/Message Box Structure 1`] = `


`;

exports[`Storyshots Components/Message Box Types 1`] = `
<section>
  

  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--active"
  >
    
    
    <div
      class="fd-message-box__content"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <h2
              class="fd-message-box__title"
            >
              Standard
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
            
        <div
          class="fd-message-box__more"
        >
          
                
          <a
            class="fd-link"
            href="#"
            tabindex="0"
          >
            Show more
          </a>
          
            
        </div>
        
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </div>
    

  </div>
  


  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--confirmation fd-message-box--active"
  >
    
    
    <div
      class="fd-message-box__content"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <h2
              class="fd-message-box__title"
            >
              Confirmation
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        OK
                    
            </button>
            
                
          </div>
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--transparent fd-button--compact fd-message-box__decisive-button"
            >
              
                        Cancel
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </div>
    

  </div>
  


  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--error fd-message-box--active"
  >
    
    
    <div
      class="fd-message-box__content"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <h2
              class="fd-message-box__title"
            >
              Error
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </div>
    

  </div>
  


  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--success fd-message-box--active"
  >
    
    
    <div
      class="fd-message-box__content"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <h2
              class="fd-message-box__title"
            >
              Success
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Vivamus sagittis diam in vehicula lobortis sapien arcu mattis erat vel aliquet sem urna et mattis erat vel aliquet in sem urna et sagittis diam in vehicula.
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </div>
    

  </div>
  


  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--warning fd-message-box--active"
  >
    
    
    <div
      class="fd-message-box__content"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <h2
              class="fd-message-box__title"
            >
              Warning
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Vivamus sagittis diam in vehicula lobortis sapien arcu mattis erat vel aliquet sem urna et. 
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </div>
    

  </div>
  


  <br />
  <br />
  <br />
  


  <div
    class="fd-message-box-docs-static fd-message-box fd-message-box--information fd-message-box--active"
  >
    
    
    <div
      class="fd-message-box__content"
    >
      
        
      <header
        class="fd-bar fd-bar--header fd-message-box__header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <h2
              class="fd-message-box__title"
            >
              Information
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-message-box__body"
      >
        
            Vivamus sagittis diam in vehicula lobortis. 
        
      </div>
      
        
      <footer
        class="fd-bar fd-bar--footer fd-message-box__footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--emphasized fd-button--compact fd-message-box__decisive-button"
            >
              
                        Close
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </div>
    

  </div>
  

</section>
`;
